tests/Fixtures/Torture/Bad/generic_expr.g
// EXPECT G000
kernel { entry func Main() { let List[Main(x)] a; } }
